[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "septic_hooks"
version = "0.0.1"
dependencies = [
    "openpyxl"
]
requires-python = ">=3.11"
description = "Pre-commit hooks useful for Septic development"

[project.scripts]
export_to_csv = "export.to_csv:main"